# vhelpers

./: LICENSE  README.md  apt-diff  dirvish_bank_conntest  dirvish_conntest  dirvish_file_change  generateprocesslist  holdmybeer  marge-cert-helper-add  ngxdissite  pfx2pem  pip-diff  pip3-diff  sizeofdeleted
cve/: cve_get_from_nist.py
marge-helpers/: marge-cert-helper-add  marge-le-deploy-hook-pem-concat  marge-postfix-postmap-recompile  marge-test-domain
package_management/: apt-diff  pip-diff
patternfollow/: README.md  follow.py  pyproject.toml  testfile_writer.sh
patternfollow/src/filterfollow/: __init__.py  filterfollow.py
patternfollow/tests/: test_filterfollow.py
patternfollow/tests/testfiles/: testfile_01_simple.txt  testfile_02_01_exp_basic_simple.txt  testfile_02_02_exp_extended_includeclosing.txt  testfile_02_03_exp_extended_excludestarting.txt  testfile_02_04_exp_excludestarting_includeclosing.txt  testfile_02_from_readme.txt  testfile_03_long.txt
roundcube-helpers/: rcadd  rcrem  roundcube_template.conf
vpn/: azurevpn2nmsettings  pfx2pem
webserver/: ngxdissite  ngxensite
